[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py310"]

[tool.isort]
force_grid_wrap=0
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
profile = "black"
skip_glob = ["deps/**"]
use_parentheses = true

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Albert <3litac@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2.0.0"
pytest-mypy = "^0.8.1"
