[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.isort]
force_grid_wrap=0
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
profile = "black"
skip_glob = ["deps/**"]
use_parentheses = true

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Albert <3litac@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.10"
iters = "^0.15.0"
rich = "^10.15.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
pytest = "^6.2.5"
ipython = "^8.18.1"
